Force use custom DatabaseConfig + disable Spring auto DataSource